Moved the three elaboration success handlers into top-level scope, and added a parameter to optionally not add new nodes - these will be used later Moved visitNodeBatch to fire once, at the end of elaboration, rather than after each of the three elaboration queries Preliminary implementation of 2nd order links, need to see if this is acceptably performant or not An alternative implementation that's a little less expensive Elaboration now checks whether >50 nodes are being added and asks user if this is ok; changed some styling, and got vex modal to appear within the graph div only rather than dimming the whole screen Update warning message, CSS change to prevent lack of scrolling when vex modal dialog appears Bug fix for dialog causing the page to "jump" to bottom Show a progress bar while calculating 2nd order links. Added PHP config variable as well as parser function parameter to determine whether to show 2nd order links for VIKI graphs. PHP config variable is global, while parser function parameter is local and takes precedent over the global setting Bug fix when canceling an elaboration, then later trying to elaborate and see 2nd order links Warning popup is now vex rather than just JS alert Update button labels for the modal dialogs

--- a/VIKI.css
+++ b/VIKI.css
@@ -6,20 +6,9 @@
 	cursor: pointer;
 }
 
-h4 vikijs-header{
-	color: #23A4FF;
-	font-size: 15px;
-	margin-bottom: 0.5em;
-	display: inline-block;
-	height:25px;
-}
-
 .vikijs-graph-container {
 	float: left;
-	top:55px;
-	padding:5px 5px 5px 5px;
 	border: 1px solid blue;
-	border-radius: 7px;
 	overflow: hidden;
 }
 
@@ -32,9 +21,7 @@ h4 vikijs-header{
 	top:5px;
 	z-index:1;
 	border:1px solid blue;
-	border-radius: 8px;
 	padding-left:10px;
-	padding-right:10px;
 }
 
 .vikijs-errors-panel {
@@ -48,7 +35,7 @@ h4 vikijs-header{
 	max-height: 7em;
 }
 
-.vikijs-zoom-slider{
+.vikijs-zoom-slider {
 float:right;
 /*
  * adjust the slider up 23px
@@ -56,6 +43,7 @@ float:right;
  * at the bottom of the container. This will adjust accordingly.
  */
 top:-18px;
+margin-right:10px;
 }
 
 .contextMenu {
@@ -64,4 +52,13 @@ top:-18px;
 
 #categoryContainer {
 	font-size: .85em;
+}
+
+body.vex-open {
+	overflow: auto !important;
+}
+
+#progressbarDiv .ui-progressbar-value.ui-widget-header {
+	background: blue;
+	height: 106% !important;
 }
